# robot-system-design

./: .gitignore  freedrive.py  get_q.py  main.py  mes.py  q.py  readme.md  rsd_conf.py  setup.py
light_tower/: .gitignore  CMakeLists.txt  main.cpp
mir/: mir.py  mir_node.py  rest_api_functions.py
packml/: CMakeLists.txt  listener.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mystate.cpp  mystate.h
rpi_modbus/: analyze_data.py  collect_data_pi.py  color_stats.json  color_stats.npy  identify_brick_pi.py  modbus_client.py  modbus_server.py  run_data_test.py  vision.py
rsd/: conf.py  execute.py  light_tower.py  main.py  mes.py  mes_state_logger.py  mir_state_watcher.py  program.py  send_signal.py  signal_test.py  ur_comm.py  ur_io.py  ur_state_watcher.py
rsd/gui/: generate_ui_mainwindow_class.sh  gui.py  resource_rc.py  resources.qrc  run.sh  ui_mainwindow.py  ui_mainwindow.ui
rsd/light_tower/: main.cpp
rsd/mir/: mir.py  rest_api_functions.py
rsd/packml/: listener.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packml.py
rsd/robot/: path.py  q.py  robot.py
rsd/robot/scripts/: freedrive.py  get_q.py  grasp_brick_test.py  move_test.py  push_test.py  set_speed_test.py
rsd/utils/: check_if_pi_is_connected.py  function_queue.py  mir_state_watcher.py  redis_helper.py  rsd_redis.py  warnings.py
rsd/vision/: analyze_data.py  cam.py  collect_data.py  color_stats.json  identify_brick_pi_video_port.py  main_pi.py  modbus_callback.py  modbus_client.py  modbus_server.py  run_data_test.py  vision_client.py
